add overview view, controller V2, and services